POLARIS HTML Home inner page BIO John D Martin page block 16, 17 responsive views some gapping issues solved[[bill-01:00-13-02262024]]

--- a/pages/bio-johnmartin/johnD.module.css
+++ b/pages/bio-johnmartin/johnD.module.css
@@ -1735,14 +1735,12 @@ background-repeat: no-repeat;background-size: cover;background-position: center;
         .polaris_j_martin_page_key_main_sub2_sec1_green p::after{    width: 18px;
             height: 18px;
             top: 6px;}
-            .polaris_j_martin_page_key_main_sub2_main_blk p{font-size: 23px;
-                line-height: 29px;}
+            .polaris_j_martin_page_key_main_sub2_main_blk p{font-size: 22px; line-height: 28px;}
                 .polaris_j_martin_page_key_main_sub10_sec1_blk{width: 100%;margin-bottom: 20px;}
                 .polaris_j_martin_page_key_main_sub10_sec2_blk p{  word-break: break-all;}
                 .polaris_j_martin_page_key_main_sub10_sec2_blk h1{    font-size: 30px;
                     line-height: 37px;}
-                    .polaris_j_martin_page_key_main_sub3_main_blk h6{    font-size: 20px;
-                        line-height: 27px;}
+                    .polaris_j_martin_page_key_main_sub3_main_blk h6{font-size: 22px; line-height: 28px;}
                         .polaris_j_martin_page_key_main_sub1_sec1_blk h2{    font-size: 30px;
                             line-height: 36px;}
 
@@ -1755,8 +1753,7 @@ background-repeat: no-repeat;background-size: cover;background-position: center;
     }
 }
 @media (max-width: 499px){
-    .polaris_j_martin_page_key_main_sub2_main_blk p{font-size: 20px;
-        line-height: 26px;    margin-bottom: 10px;}
+    .polaris_j_martin_page_key_main_sub2_main_blk p{font-size: 22px; line-height: 28px; margin-bottom: 10px;}
         .polaris_j_martin_page_key_main_sub2_sec1_green p::after{    width: 15px;
             height: 15px;
             top: 5px;}
